Version 4.0-3

Added cex sub-args for x and y axes (suggestion of Charles Leger) and for lattice strips.

Version 4.0-2

 o Fixed bug with offsets in predictorEffects and a bug with variances in Effect.default.
 
 o Support partial-residual plots when the predictor on the horizontal axis is a factor.

 o For nonstandard models like lme, the weights argument was obtained from the call that created the object.  This argument was never used by effects, and caused an error with lme models that used weights. The weights argument is now ignored.
 
 o Fixed a bug due to new complete arg in vcov.lm() and vcov.glm().
 
 o lty was ignored for multiplot with factor on x-axis; now fixed (reported by Krisztian Magori).
 
 o Small fixes and improvements.

Version 4.0-1
 
 o Replaced the Effect.default method so it is easier to write new methods.
 
 o Added estimability check for linear models and glims.  Fixed bugs in plot with rank deficient models.
 
 o Repaired clm, clmm and clm2 methods that were broken.
 
 o Fixed a bug in predictorEffects with polym use to specify multivariate polynomials.
 
 o Replace confint and partial.residuals argument to Effect() with se and residuals; confint and partial.residuals now legacy arguments.
 
 o Small fixes/improvements.

Version 4.0-0

 o This is a major update of the effects package.

 o Moved data sets to the carData package.
 
 o Introduced predictor effects.
 
 o Reorganized complex arguments to  plot() and Effect() into lists; legacy arguments retained as alternatives.
 
 o Use lattice theme for plot defaults.
 
 o Improve generation of default values for numeric predictors.
 
 o Methods for "svyglm" objects.
 
 o New vignette on partial residuals with contrived data. 
 
 o Various small improvements and fixes.

Version 3.1-3

 o Fixed bug in using multiline=TRUE with effects with 4 or more terms

 o Fixed a bug in Effect.clmm, Effect.mer, and Effect.lme that caused failure with a data.frame named m
